--- a/Día_10/Proyecto/misEstilos.css
+++ b/Día_10/Proyecto/misEstilos.css
@@ -7,7 +7,7 @@ h1 {
 }
 
 button {
-    background-color: #4CAF50; /* Verde */
+    background-color: #FF69B4; 
     border: none;
     color: white;
     padding: 15px 32px;
@@ -18,6 +18,9 @@ button {
     margin: 4px 2px;
     cursor: pointer;
     border-radius: 5px;
+}
+button:hover{
+    background-color: #a54977; 
 }
 
 ul {
